# WARdrobe

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
assets/audio/: footsteps.raw
assets/levels/: levelTest.json
assets/models/: Monster_1.dae  Wolf_dae.dae  model_tutorial.dae
assets/models/BatBulb/: BatBulbFlight.fbx  BatBulbSpin.fbx
assets/models/Carabinet/: CarabinetSmack.fbx  CarabinetWalk.fbx
assets/models/Drugman/: DrugmanLeftAttack.fbx  DrugmanRightAttack.fbx  DrugmanWalk.fbx  DrugmanWalkArmless.fbx  DrugmanWindmill.fbx
assets/models/Interior/: Beds.fbx  BigBox.fbx  Forklift.fbx  Scanning.fbx  Shelf1.fbx  SmallForklift.fbx  Table1.fbx  Table2.fbx
assets/models/Lamp/: LampJump.fbx  LampSmack.fbx
assets/scripts/: bulbAttack.lua  camera.lua  character.lua  combos.lua  enemy.lua  equipment.lua  generateScript.sh  initActors.lua  lampAttack.lua  luascript.lua  main.lua  movement.lua  pillBlue.lua  pillGreen.lua  pillRed.lua  script2.lua  test.lua  weapon.lua
assets/shaders/: animatedModelShadowVertex.glsl  animatedModelVertex.glsl  billboardVertex.glsl  boxFragment.glsl  cubemapFragment.glsl  fragment.glsl  fragment1.glsl  modelFragment.glsl  modelShadowVertex.glsl  plainModelVertex.glsl  quadFragment.glsl  vertex.glsl  vertex1.glsl
config/: Constants.h.in  Enums.h.in  Version.h.in
docs/: 200.html  About-us.html  Blog.html  Contact.html  Store.html  asset-manifest.json  index.html  precache-manifest.fb5ded7b0e0d8220f4c227179d2d05dc.js  service-worker.js
docs/static/css/: main.2ff3d360.chunk.css  main.2ff3d360.chunk.css.map
docs/static/js/: 2.fa037d29.chunk.js  2.fa037d29.chunk.js.map  main.2d0b5d9d.chunk.js  main.2d0b5d9d.chunk.js.map
game/: CMakeLists.txt
game/include/: Action.hpp  ActionManager.hpp  AnimationSystem.hpp  CameraSystem.hpp  Character.hpp  ColliderSystem.hpp  Game.hpp  LightningSystem.hpp  Logger.hpp  PhysicsSystem.hpp  RenderSystem.hpp  ScriptsCommunicationFunctions.hpp  ScriptsSystem.hpp  ShaderSystem.hpp
game/src/: Game.cpp  main.cpp
gdd/: gdd.md  gdd.sh
gdd/filters/: fenced_divs.lua  mark_to_latex.lua  warning.lua
gdd/styles/: gdd.css
libs/: CMakeLists.txt
libs/assetmanager/: CMakeLists.txt
libs/assetmanager/include/: AssetManager.hpp  ConfigManager.hpp
libs/assetmanager/src/: AssetManager.cpp  ConfigManager.cpp
libs/audio/: CMakeLists.txt
libs/audio/include/: AudioManager.hpp  AudioObject.hpp
libs/audio/src/: AudioManager.cpp
libs/ecs/: CMakeLists.txt
libs/ecs/include/: ComponentArray.hpp  ComponentManager.hpp  ECSTypes.hpp  EntityManager.hpp  GameplayManager.hpp  IComponentArray.hpp  System.hpp  SystemManager.hpp  ecs.hpp
libs/ecs/src/: EntityManager.cpp
libs/input/: CMakeLists.txt
libs/input/include/: InputManager.hpp  VirtualInput.hpp  VirtualInputManager.hpp
libs/input/src/: InputManager.cpp  VirtualInputManager.cpp
libs/renderer/: CMakeLists.txt
libs/renderer/include/: Animation.hpp  Animator.hpp  Bone.hpp  BoneTransform.hpp  Camera.hpp  DebugUI.hpp  Input.hpp  InputData.hpp  InputHandler.hpp  InputManager.hpp  KeyFrame.hpp  Light.hpp  Mesh.hpp  Model.hpp  ModelArray.hpp  Renderer.hpp  Shader.hpp  Skybox.hpp  Window.hpp
libs/renderer/src/: Bone.cpp  Camera.cpp  DebugUI.cpp  InputHandler.cpp  InputManager.cpp  Light.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Shader.cpp  Window.cpp
resources/images/: wardrobe_splash.xcf
settings/: DefaultSettings.toml
utilities/scripts/: restore-git-submodules.sh
